feat: fix sound effect player, add click sound for buttons