@@ -12,10 +12,9 @@ public class AudioPlayer {
     private final Map<String, Clip> songs = new HashMap<>();
     private final Map<String, Clip> effects = new HashMap<>();
     private String currentSongKey;
-    private float volume = 0.5f;
+    private float volume = 0.8f;
     private boolean songMute = false;
     private boolean effectMute = false;
-    private final Random random = new Random();
 
     private AudioPlayer() {}
 
@@ -82,30 +81,23 @@ public class AudioPlayer {
         }
     }
 
-    // --- Sound effects ---
     public void playEffect(String key) {
         if (effectMute) return;
         Clip clip = effects.get(key);
         if (clip != null) {
-            if (clip.isRunning()) clip.setMicrosecondPosition(0);
+            // Stop if currently playing (so we can rewind)
+            if (clip.isRunning()) {
+                clip.stop();
+            }
+            // Rewind to the beginning
+            clip.setMicrosecondPosition(0);
             clip.start();
             updateVolume(clip);
         }
     }
 
-    /**
-     * Plays one of several attack sounds randomly.
-     * @param baseKeys array of effect keys for different attack sounds
-     */
-    public void playRandomEffect(String[] baseKeys) {
-        if (baseKeys.length == 0) return;
-        String key = baseKeys[random.nextInt(baseKeys.length)];
-        playEffect(key);
-    }
-
-    // --- Volume control (affects all loaded clips) ---
     public void setVolume(float volume) {
-        this.volume = Math.max(0.0f, Math.min(1.0f, volume));
+        this.volume = Math.clamp(volume, 0.0f, 1.0f);
         // Update currently playing song and all effects (if they are open)
         if (currentSongKey != null) updateVolume(songs.get(currentSongKey));
         for (Clip clip : effects.values()) updateVolume(clip);
@@ -120,7 +112,6 @@ public class AudioPlayer {
         gainControl.setValue(gain);
     }
 
-    // --- Mute toggles ---
     public void toggleSongMute() {
         songMute = !songMute;
         if (currentSongKey != null) {
@@ -134,7 +125,6 @@ public class AudioPlayer {
 
     public void toggleEffectMute() {
         effectMute = !effectMute;
-        // (no effect on already‑playing sounds; future ones will be blocked)
     }
 
     public boolean isSongMute() { return songMute; }
